Show list all finish

--- a/app/src/main/res/layout/activity_my_calendar.xml
+++ b/app/src/main/res/layout/activity_my_calendar.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg33">
+    android:background="@drawable/bg33"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="match_parent"
@@ -71,10 +72,19 @@
         android:verticalSpacing="-1px"
         android:numColumns="7"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="239dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:layout_weight="0.51">
     </GridView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="clickReadAllData"
+        android:text="Read All Data"
+        android:id="@+id/button3"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
