--- a/app/src/main/res/layout/activity_to_do_adapter.xml
+++ b/app/src/main/res/layout/activity_to_do_adapter.xml
@@ -10,7 +10,8 @@
         android:text="New Text"
         android:id="@+id/textView12"
         android:textSize="17sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="#050404" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,5 +19,6 @@
         android:text="New Text"
         android:id="@+id/textView13"
         android:textSize="14sp"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:textColor="#f51313" />
 </LinearLayout>
